2006-06-08  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (PTH_LIBS): Add --all to pth-config invocation.

2006-03-14  Werner Koch  <wk@g10code.com>

	* configure.ac: Check for fctnl and ftruncate.
	(HAVE_PTH): Check for GNU Pth.
	(HAVE_W32_SYSTEM): Define it.
	* acinclude.m4 (GNUPG_PTH_VERSION_CHECK): New. Taken from GnuPG 1.4.

2005-12-08  Werner Koch  <wk@g10code.com>

	* configure.ac: Changed the random device names for netbsd.  From
	Christian Biere.

2005-11-02  Moritz Schulte  <moritz@g10code.com>

	* NEWS: Documented minor API changes.

2005-09-15  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (EXTRA_DIST): Depend on README.SVN, not on README.CVS.

2005-06-25  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Removed src/libgcrypt.pc from AC_CONFIG_FILES.

2005-06-10  Werner Koch  <wk@g10code.com>

	* configure.ac: Move detection of basic stuff to the top.  For
	example we need to know whether gcc is used before testing for it.
	Reported by Ralf Fassel.
	
2005-04-23  Moritz Schulte  <moritz@g10code.com>

	* acinclude.m4 (TYPE_SOCKLEN_T): New type definition test;
	provided by Albert Chin.
	* configure.ac: Don't use $(CMD) as it's not portable; use CMD in
	backticks instead.  Simpler -lnsl/-lsocket test.  Use
	TYPE_SOCKLEN_T test.  Don't forget to set `random_modules'
	correctly.

2005-04-22  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Added support for pkgconfig; provided by Albert
	Chin.

2005-04-11  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Integrate Whirlpool.

2005-01-04  Werner Koch  <wk@g10code.com>

	Updated to automake 1.9.
	
	* acinclude.m4: Updated for use with automake 1.9. 

	* configure.ac: Require libgpg-error 1.0; not really needed but
	that is the first stable version.

	* Makefile.am (ACLOCAL_AMFLAGS): New for -I m4.
	(AUTOMAKE_OPTIONS): New to create a bzip archive.

2005-02-03  Moritz Schulte  <moritz@g10code.com>

	* THANKS: Updated.

2004-08-09  Moritz Schulte  <moritz@g10code.com>
