@@ -1,3 +1,7 @@
+2006-07-04  Marcus Brinkmann  <marcus@g10code.de>
+
+	* sys_socket_h.m4, socklen.m4, onceonly.m4: New files from gnulib.
+	
 2004-04-06  Werner Koch  <wk@gnupg.org>
 
 	* libtool.m4: Updated from 1.5.4
